Se agrega correcion en el codigo de frenar